# manifold

.github/workflows/: build-libs.yml
assets/: manifoldCAD.css
assets/make-manifold/: manifold.wasm
bindings/c/: CMakeLists.txt  Info.plist  conv.h  manifoldc.cpp  manifoldc_csharp_extensions.c
bindings/c/include/: manifoldc_csharp_internal_wrappers.h
bindings/csharp/: Manifoldc.cs  ManifoldcExtra.cs  MfBox.cs  MfCrossSection.cs  MfManifold.cs  MfManifoldVec.cs  MfMeshGL.cs  MfRect.cs
cmake/: manifoldDeps.cmake
docs/html/: index.html
docs/jsapi/classes/: lib_error.BundlerError.html  lib_error.ImportError.html  lib_error.RuntimeError.html  lib_error.UnsupportedFormatError.html  lib_gltf-node.BaseGLTFNode.html  lib_gltf-node.CrossSectionGLTFNode.html  lib_gltf-node.GLTFNode.html  lib_gltf-node.GLTFNodeTracked.html  lib_gltf-node.VisualizationGLTFNode.html  manifold-gltf.EXTManifold.html  manifold-gltf.ManifoldPrimitive.html
docs/jsapi/functions/: lib_animation.addAnimationToDoc.html  lib_animation.addMotion.html  lib_animation.cleanup.html  lib_animation.cleanupAnimationInDoc.html  lib_animation.getAnimationDuration.html  lib_animation.getAnimationFPS.html  lib_animation.getAnimationMode.html  lib_animation.getMorph.html  lib_animation.morphEnd.html  lib_animation.morphStart.html  lib_animation.setAnimationDuration.html  lib_animation.setAnimationFPS.html  lib_animation.setAnimationMode.html  lib_animation.setMorph.html  lib_animation.setMorphEnd.html  lib_animation.setMorphStart.html  lib_bundler.bundleCode.html  lib_bundler.bundleFile.html  lib_bundler.esbuildManifoldPlugin.html  lib_bundler.setHasOwnWorker.html  lib_debug.only.html  (+74 more)
scripts/: build-all.sh  build-manifoldc-android-all.sh  build-manifoldc-android.sh  build-manifoldc-ios.sh  build-manifoldc-linux.sh  build-manifoldc-macos.sh  build-manifoldc-web.sh  build-manifoldc-windows.ps1
src/: CMakeLists.txt
(+63 files in other folders)
